kubeflow/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: kubeflow-ingress
  namespace: istio-system
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - test2.k8s.eecs.net
      secretName: k8s.eecs.net
  rules:
    - host: test2.k8s.eecs.net
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              serviceName: istio-ingressgateway
              servicePort: 80
